--- a/templates/sagemaker-featurestore-template.yaml
+++ b/templates/sagemaker-featurestore-template.yaml
@@ -261,8 +261,8 @@ Resources:
         - python3.6
         - python3.7
       Content:
-        S3Bucket: !Sub sagemaker-feature-store-streaming-aggregation-${AWS::Region}
-        S3Key: artifacts/latest/boto3-1-16-28.zip
+        S3Bucket: gotham-dev-featurestore-streaming
+        S3Key: boto3-1.16.28.zip
       Description: Upgraded version of boto3 library for SageMaker FeatureStore
       LicenseInfo: MIT
 
@@ -274,8 +274,8 @@ Resources:
       Runtime: python3.7
       Handler: lambda_function.lambda_handler
       Code:
-        S3Bucket: !Sub 'sagemaker-feature-store-streaming-aggregation-${AWS::Region}'
-        S3Key: artifacts/latest/InvokeFraudEndpointLambda.zip
+        S3Bucket: gotham-dev-featurestore-streaming
+        S3Key: InvokeFraudEndpointLambda.zip
       Layers:
         - !Ref Boto3LibLayer
       MemorySize: 512
@@ -298,8 +298,8 @@ Resources:
       Runtime: python3.7
       Handler: lambda_function.lambda_handler
       Code:
-        S3Bucket: !Sub 'sagemaker-feature-store-streaming-aggregation-${AWS::Region}'
-        S3Key: artifacts/latest/StreamingIngestAggFeatures.zip
+        S3Bucket: gotham-dev-featurestore-streaming
+        S3Key: StreamingIngestAggFeatures.zip
       Layers:
         - !Ref Boto3LibLayer
       MemorySize: 512
@@ -310,13 +310,13 @@ Resources:
           CC_AGG_FEATURE_GROUP_NAME: !Ref CreditCardAggregateFeatureStoreName
           HOME: /tmp
 
-  FeatureStoreNotebook:
-    Type: "AWS::SageMaker::NotebookInstance"
-    Properties:
-      NotebookInstanceName: !Ref SageMakerNotebookName
-      InstanceType: "ml.m5.xlarge"
-      RoleArn: !GetAtt SageMakerRole.Arn
-      DefaultCodeRepository: "https://github.com/aws-samples/amazon-sagemaker-feature-store-streaming-aggregation"
+  # FeatureStoreNotebook:
+  #   Type: "AWS::SageMaker::NotebookInstance"
+  #   Properties:
+  #     NotebookInstanceName: !Ref SageMakerNotebookName
+  #     InstanceType: "ml.m5.xlarge"
+  #     RoleArn: !GetAtt SageMakerRole.Arn
+  #     DefaultCodeRepository: "https://github.com/aws-samples/amazon-sagemaker-feature-store-streaming-aggregation"
 
 Outputs:
   LambdaRoleARN:
@@ -343,6 +343,6 @@ Outputs:
     Export:
       Name:
         Fn::Sub: IngestLambdaARN
-  FeatureStoreNotebookId:
-    Value: !Ref FeatureStoreNotebook
+  # FeatureStoreNotebookId:
+  #   Value: !Ref FeatureStoreNotebook
 
